--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:  # Manually start a workflow
   push:
     branches:
-    - main
+    - master
     paths-ignore:
     - '.github/**' # Ignore changes towards the .github directory
 
